--- a/chapter.tex
+++ b/chapter.tex
@@ -32,6 +32,13 @@
 \newcommand{\RegionMarkerTok}[1]{{#1}}
 \newcommand{\ErrorTok}[1]{\textcolor[rgb]{1.00,0.00,0.00}{\textbf{{#1}}}}
 \newcommand{\NormalTok}[1]{{#1}}
+% Redefine labelwidth for lists; otherwise, the enumerate package will cause
+% markers to extend beyond the left margin.
+\makeatletter\AtBeginDocument{%
+  \renewcommand{\@listi}
+    {\setlength{\labelwidth}{4em}}
+}\makeatother
+\usepackage{enumerate}
 \usepackage{graphicx}
 % We will generate all images so they have a width \maxwidth. This means
 % that they will get their normal width if they fit onto the page, but
@@ -41,7 +48,7 @@
 \else\Gin@nat@width\fi}
 \makeatother
 \let\Oldincludegraphics\includegraphics
-\renewcommand{\includegraphics}[1]{\Oldincludegraphics[width=\maxwidth]{#1}}
+\renewcommand{\includegraphics}[1]{\Oldincludegraphics[width=8cm]{#1}}
 \ifxetex
   \usepackage[setpagesize=false, % page size defined by xetex
               unicode=false, % unicode breaks when used with xetex
@@ -58,9 +65,19 @@
 \setlength{\parskip}{6pt plus 2pt minus 1pt}
 \setlength{\emergencystretch}{3em}  % prevent overfull lines
 \setcounter{secnumdepth}{0}
+\usepackage[margin=2cm]{geometry}
 
+\author{
+Cheshire, James\\
+\texttt{james.cheshire@ucl.ac.uk}
+\and
+Lovelace, Robin\\
+\texttt{r.lovelace@leeds.ac.uk}
+}
+\title{Spatial data visualisation with R}
 
 \begin{document}
+\maketitle
 
 \section{Introduction}
 
@@ -212,77 +229,40 @@ inspiration for work with your own data.
 
 In any data analysis project, spatial or otherwise, it is important to
 have a strong understanding of the dataset before progressing. This
-section will therefore begin with a description of the input data used
-in this section. We will see how data can be loaded into R and exported
-to other formats, before going into more detail about the underlying
-structure of spatial data in R: how it `sees' spatial data is quite
-unique.
+section will therefore begin with a description of the input data. We
+will see how data can be loaded into R and exported to other formats,
+before going into more detail about the underlying structure of spatial
+data in R: how it `sees' spatial data is quite unique.
 
 \subsubsection{Loading spatial data in R}
 
 In most situations, the starting point of spatial analysis tasks is
 loading in pre-existing datasets. These may originate from government
 agencies, remote sensing devices or `volunteered geographical
-information' from GPS devices, online databases such as Open Street Map
-or geo-tagged social media (Goodchild 2007). The diversity of
-geographical data formats is large.
+information' (Goodchild 2007). The diversity of geographical data
+formats is large.
 
 R is able to import a very wide range of spatial data formats thanks to
 its interface with the Geospatial Data Abstraction Library (GDAL), which
-is enabled by loading the package \texttt{rgdal} into R. Below we will
-load data from two spatial data formats: GPS eXchange (\texttt{.gpx})
-and an ESRI Shapefile (consisting of at least files with \texttt{.shp},
-\texttt{.shx} and \texttt{.dbf} extensions).
+is enabled by the package \texttt{rgdal}. Below we will load data from
+two spatial data formats: GPS eXchange (\texttt{.gpx}) and an ESRI
+Shapefile.
 
-\texttt{readOGR} is in fact cabable of loading dozens more file formats,
+\texttt{readOGR} is in fact capable of loading dozens more file formats,
 so the focus is on the \emph{method} rather than the specific formats.
 The `take home message' is that the \texttt{readOGR} function is capable
 of loading most common spatial file formats, but behaves differently
 depending on file type. Let's start with a \texttt{.gpx} file, a
 tracklog recording a bicycle ride from Sheffield to Wakefield which was
-uploaded Open Street Map. {[}!!! more detail?{]}
+uploaded Open Street Map {[}3{]}.
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\CommentTok{# download.file('http://www.openstreetmap.org/trace/1619756/data', destfile}
-\CommentTok{# = 'data/gps-trace.gpx')}
+\KeywordTok{download.file}\NormalTok{(}\StringTok{"http://www.openstreetmap.org/trace/1619756/data"}\NormalTok{, }\DataTypeTok{destfile =} \StringTok{"data/gps-trace.gpx"}\NormalTok{)}
 \KeywordTok{library}\NormalTok{(rgdal)  }\CommentTok{# load the gdal package}
-\end{Highlighting}
-\end{Shaded}
-\begin{verbatim}
-## Loading required package: sp
-## rgdal: version: 0.8-10, (SVN revision 478)
-## Geospatial Data Abstraction Library extensions to R successfully loaded
-## Loaded GDAL runtime: GDAL 1.10.0, released 2013/04/24
-## Path to GDAL shared files: /usr/share/gdal/1.10
-## Loaded PROJ.4 runtime: Rel. 4.8.0, 6 March 2012, [PJ_VERSION: 480]
-## Path to PROJ.4 shared files: (autodetected)
-\end{verbatim}
-\begin{Shaded}
-\begin{Highlighting}[]
 \NormalTok{shf2lds <- }\KeywordTok{readOGR}\NormalTok{(}\DataTypeTok{dsn =} \StringTok{"data/gps-trace.gpx"}\NormalTok{, }\DataTypeTok{layer =} \StringTok{"tracks"}\NormalTok{)  }\CommentTok{# load track}
-\end{Highlighting}
-\end{Shaded}
-\begin{verbatim}
-## OGR data source with driver: GPX 
-## Source: "data/gps-trace.gpx", layer: "tracks"
-## with 1 features and 12 fields
-## Feature type: wkbMultiLineString with 2 dimensions
-\end{verbatim}
-\begin{Shaded}
-\begin{Highlighting}[]
 \KeywordTok{plot}\NormalTok{(shf2lds)}
 \NormalTok{shf2lds.p <- }\KeywordTok{readOGR}\NormalTok{(}\DataTypeTok{dsn =} \StringTok{"data/gps-trace.gpx"}\NormalTok{, }\DataTypeTok{layer =} \StringTok{"track_points"}\NormalTok{)  }\CommentTok{# load points}
-\end{Highlighting}
-\end{Shaded}
-\begin{verbatim}
-## OGR data source with driver: GPX 
-## Source: "data/gps-trace.gpx", layer: "track_points"
-## with 6085 features and 26 fields
-## Feature type: wkbPoint with 2 dimensions
-\end{verbatim}
-\begin{Shaded}
-\begin{Highlighting}[]
 \KeywordTok{points}\NormalTok{(shf2lds.p[}\KeywordTok{seq}\NormalTok{(}\DecValTok{1}\NormalTok{, }\DecValTok{3000}\NormalTok{, }\DecValTok{100}\NormalTok{), ])}
 \end{Highlighting}
 \end{Shaded}
@@ -298,39 +278,41 @@ about what has happened, line-by-line.
 
 First, we used R to \emph{download} a file from the internet, using the
 function \texttt{download.file}. The two essential arguments of this
-function are \texttt{url} (we could have typed\texttt{url =} before the
-link) and \texttt{destfile} (which means destination file). As with any
-function, more optional arguments can be viewed by typing
+function are \texttt{url} (we could have typed \texttt{url =} before the
+link) and \texttt{destfile}, the destination file. As with any function,
+more optional arguments can be viewed by by typing
 \texttt{?download.file}.
 
-When \texttt{rgdal} has succesfully loaded, the next task is not to
+When \texttt{rgdal} has successfully loaded, the next task is not to
 import the file directly, but to find out which \emph{layers} are
-available to import, with the function \texttt{ogrListLayers}. The
-output from this command tells us that various layers are available,
-including \texttt{tracks} and \texttt{track\_points}, which we
-subsequently load using \texttt{readOGR}. The basic \texttt{plot}
-function is used to plot the newly imported objects, ensuring they make
-sense. In the second \texttt{plot} function, we take a subset of the
-object (see section \ldots{} for more on this).
+available to import, with \texttt{ogrListLayers}. The output from this
+command tells us that various layers are available, including
+\texttt{tracks} and \texttt{track\_points}: try it. These are imported
+into R's \emph{workspace} using \texttt{readOGR}.
+
+Finally, the basic \texttt{plot} function is used to visualize the newly
+imported objects, ensuring they make sense. In the second \texttt{plot}
+function, we take a subset of the object (see section \ldots{} for more
+on this).
 
 As stated in the help documentation (accessed by entering
 \texttt{?readOGR}), the \texttt{dsn =} argument is interpreted
 differently depending on the type of file used. In the above example,
-the filename was the data source name. To load Shapefiles, by contrast,
-the \emph{folder} containing the data is used:
+the file name was the file name. To load Shapefiles, by contrast, the
+\emph{folder} containing the data is used:
 
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{lnd <- }\KeywordTok{readOGR}\NormalTok{(}\DataTypeTok{dsn =} \StringTok{"data/"}\NormalTok{, }\StringTok{"london_sport"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
-Here, the data is assumed to reside in a folder entitled \texttt{data}
-which in R's current working directory (remember to check this using
+Here, the files reside in a folder entitled \texttt{data} which in R's
+current working directory (remember to check this using
 \texttt{getwd()}). If the files were stored in the working directory,
 one would use \texttt{dsn = "."} instead. Again, it may be wise to plot
 the data that results, to ensure that it has worked correctly. Now that
 the data has been loaded into R's own \texttt{sp} format, try
-interogating and plotting it, using functions such as \texttt{summary}
+interrogating and plotting it, using functions such as \texttt{summary}
 and \texttt{plot}.
 
 \subsubsection{The size of spatial datasets in R}
@@ -339,18 +321,16 @@ Any data that has been read into R's \emph{workspace}, which constitutes
 all objects that can be accessed by name and can be listed using the
 \texttt{ls()} function, can be saved in R's own data storage file type,
 \texttt{.RData}. Spatial datasets can get quite large and this can cause
-problems on computers by consuming all available random access memory
-(RAM) or hard disk space available to the computer. It is therefore wise
-to understand roughly how large spatial objects are; this will also
-provide insight into how long certain functions will take to run.
+problems on computers by consuming all available memory (RAM) or hard
+disk space. It is wise to understand roughly how large spatial objects
+are, providing insight into how long certain functions will take to run.
 
 In the absence of prior knowledge, which of the two objects loaded in
-the previous section would be expected to take up more memory. One could
-hypothesise that the London boroughs represented by the object
-\texttt{lnd} would be larger, but how much larger? We could simply look
-at the size of the associated files, but R also provides a function
-(\texttt{object.size}) for discovering how large objects loaded into its
-workspace are:
+the previous section would one expect to be larger? One could
+hypothesize that the London boroughs represented by the object
+\texttt{lnd} would be larger based on its greater spatial extent, but
+how much larger? The answer in R is found in the function
+\texttt{object.size}:
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -400,16 +380,16 @@ dataset:
 \end{verbatim}
 \begin{Shaded}
 \begin{Highlighting}[]
-\KeywordTok{sapply}\NormalTok{(shf2lds@lines, function(x) }\KeywordTok{nrow}\NormalTok{(x@Lines[[}\DecValTok{1}\NormalTok{]]@coords))}
+\NormalTok{(nverts <- }\KeywordTok{sapply}\NormalTok{(shf2lds@lines, function(x) }\KeywordTok{nrow}\NormalTok{(x@Lines[[}\DecValTok{1}\NormalTok{]]@coords)))}
 \end{Highlighting}
 \end{Shaded}
 \begin{verbatim}
 ## [1] 6085
 \end{verbatim}
-It is quite likely that the above code little sense at first; the
+It is quite likely that the above code little sense at first. The
 important thing to remember is that for each object we performed two
 functions: 1) a check that each line or polygon consists only of a
-single \emph{part} (that can be joined to attribut data) and 2) the use
+single \emph{part} (that can be joined to attribute data) and 2) the use
 of \texttt{nrow} to count the number of vertices. The use of the
 \texttt{@} symbol should seem strange - its meaning will become clear in
 the section !!!. (Note also that the function \texttt{fortify},
@@ -431,7 +411,7 @@ question: can the object be simplified such that its key features
 features remain while substantially reducing its size? The answer is
 yes. In the code below, we harness the power of the \texttt{rgeos}
 package and its \texttt{gSimplify} function to simplify spatial R
-objects (the code can also be used to simplify polygon geometries):
+objects:
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -462,52 +442,252 @@ In the above block of code, \texttt{gSimplify} is given the object
 \texttt{shf2lds} and the \texttt{tol} argument, short for ``tolerance'',
 is set at 0.001 (much larger values may be needed, for data that use is
 \emph{projected} - does not use latitude and longitude). Comparison
-between the sizes of the simplified object and the orginal shows that
+between the sizes of the simplified object and the original shows that
 the new object is less than 3\% of its original size. Try plotting the
-orginal and simplified tracks on your computer: when visualised using
+original and simplified tracks on your computer: when visualized using
 the \texttt{plot} function, it becomes clear that the object
 \texttt{shf2lds.simple} retains the overall shape of the line and is
-virtually indistinguishable from the orginal object.
+virtually indistinguishable from the original object.
 
 This example is rather contrived because even the larger object
 \texttt{shf2lds} is only 0.107 Mb, negligible compared with the
 gigabytes of RAM available to modern computers. However, it underlines a
-wider point: for \emph{visualisation} purposes at small spatial scales
-(i.e.~covering a large area of the Earth on a small map), the
-\emph{geometries} associated with spatial data can often be simplified
-to reduce processing time and usage of RAM. The other advantage of
-simplification is that it reduces the size occupied by spatial datasets
-when they are saved.
+wider point: for visualizing \emph{small scale} maps, spatial data
+\emph{geometries} can often be simplified to reduce processing time and
+use of computer memory.
 
 \subsubsection{Saving and exporting spatial objects}
 
+A typical R workflow involves loading the data, processing and finally
+exporting the data in a new form. \texttt{writeOGR}, the logical
+counterpart of \texttt{readOGR} is ideal for this task. Imagine that we
+want to view the simplified \texttt{gpx} data in software that can only
+read Shapefiles. This is performed using the following command:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{shf2lds.simple <- }\KeywordTok{SpatialLinesDataFrame}\NormalTok{(shf2lds.simple, }\DataTypeTok{data =} \KeywordTok{data.frame}\NormalTok{(}\DataTypeTok{row.names =} \StringTok{"0"}\NormalTok{, }
+    \DataTypeTok{a =} \DecValTok{1}\NormalTok{))}
+\KeywordTok{writeOGR}\NormalTok{(shf2lds.simple, }\DataTypeTok{layer =} \StringTok{"shf2lds"}\NormalTok{, }\DataTypeTok{dsn =} \StringTok{"data/"}\NormalTok{, }\DataTypeTok{driver =} \StringTok{"ESRI Shapefile"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+In the above code, the object was first converted into a spatial
+dataframe class, before being exported as a shapefile entitled shf2lds.
+Unlike with \texttt{readOGR}, the driver must be specified, in this case
+with ``ESRI Shapefile'' {[}4{]}. The simplified GPS data is now
+available to other GIS programs for further analysis.
+
 \subsection{The structure of spatial data in R}
 
-\subsubsection{Spatial* data}
+Spatial datasets in R are saved in their own format, defined as
+\texttt{Spatial...} classes within the \texttt{sp} package. For this
+reason, \texttt{sp} is the basic spatial package in R, upon which the
+others depend. Spatial classes range from the simples class
+\texttt{Spatial} to the most complex, \texttt{SpatialPolygonsDataFrame}:
+the \texttt{Spatial} class contains only two required
+\emph{slots}{[}5{]}:
 
-\paragraph{Points}
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{getSlots}\NormalTok{(}\StringTok{"Spatial"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+\begin{verbatim}
+##        bbox proj4string 
+##    "matrix"       "CRS"
+\end{verbatim}
+Further details on these can be found by typing \texttt{?bbox} and
+\texttt{?proj4string}. All other spatial classes in R build on this
+foundation of a bounding box and a projection system (which is set
+automatically to \texttt{NA} if it is not known). However, more complex
+classes contain more slots, some of which are lists which contain
+additional lists. To find out the slots of \texttt{shf2lds.simple}, for
+example, we would first ascertain its class and then use the
+\texttt{getSlots} command:
 
-\paragraph{Lines}
-
-\paragraph{Polygons}
-
-\paragraph{Grids and raster data}
-
-\subsection{The main spatial packages}
-
-\subsubsection{sp}
-
-\subsubsection{rgdal}
-
-\subsubsection{rgeos}
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{class}\NormalTok{(shf2lds.simple)  }\CommentTok{# identify the object's class}
+\end{Highlighting}
+\end{Shaded}
+\begin{verbatim}
+## [1] "SpatialLinesDataFrame"
+## attr(,"package")
+## [1] "sp"
+\end{verbatim}
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{getSlots}\NormalTok{(}\StringTok{"SpatialLinesDataFrame"}\NormalTok{)  }\CommentTok{# find the associated slots}
+\end{Highlighting}
+\end{Shaded}
+\begin{verbatim}
+##         data        lines         bbox  proj4string 
+## "data.frame"       "list"     "matrix"        "CRS"
+\end{verbatim}
+The same principles apply to all spatial classes including
+\texttt{Spatial* Points}, \texttt{Polygons} \texttt{Grids} and
+\texttt{Pixels} as well as associated \texttt{*DataFrame} classes. For
+more information on this, see the \texttt{sp} documentation:
+\texttt{?Spatial}.
 
 \subsection{Manipulating spatial data}
 
-\subsubsection{Coordinate reference systems and transformations}
+\subsubsection{Coordinate reference systems}
 
-\subsubsection{Attribute joins}
+As mentioned in the previous section, all \texttt{Spatial} objects in R
+are allocated a coordinate reference system (CRS). The CRS of any
+spatial object can be found using the command \texttt{proj4string}. In
+some cases the CRS is not known: in this case the result will simply be
+\texttt{NA}. To discover the CRS of the \texttt{lnd} object for example,
+type the following:
 
-\subsubsection{Spatial joins}
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{proj4string}\NormalTok{(lnd)}
+\end{Highlighting}
+\end{Shaded}
+\begin{verbatim}
+## [1] "+proj=tmerc +lat_0=49 +lon_0=-2 +k=0.9996012717 +x_0=400000 +y_0=-100000 +ellps=airy +units=m +no_defs"
+\end{verbatim}
+The output may seem cryptic but is in fact highly informative:
+\texttt{lnd} has \emph{projected} coordinates, based on the
+\href{http://en.wikipedia.org/wiki/Transverse\_Mercator\_projection}{\emph{Transverse
+Mercator}} system (hence \texttt{"+proj=tmerc"} in the output) and its
+origin is at latitude 49N, -2E. This point is
+
+If we \emph{know} that the CRS is incorrectly specified, it can be
+re-set. In this case, for example we know that \texttt{lnd} actually has
+a CRS OSGB1936. Knowing also that the code for this is 27700, it can be
+updated as follows:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{proj4string}\NormalTok{(lnd) <- }\KeywordTok{CRS}\NormalTok{(}\StringTok{"+init=epsg:27700"}\NormalTok{)}
+\KeywordTok{proj4string}\NormalTok{(lnd)}
+\end{Highlighting}
+\end{Shaded}
+\begin{verbatim}
+## [1] "+init=epsg:27700 +proj=tmerc +lat_0=49 +lon_0=-2 +k=0.9996012717 +x_0=400000 +y_0=-100000 +datum=OSGB36 +units=m +no_defs +ellps=airy +towgs84=446.448,-125.157,542.060,0.1502,0.2470,0.8421,-20.4894"
+\end{verbatim}
+The CRS has now been updated - note that the key details are all the
+same as before. Note: this method \textbf{should never} be used as an
+attempt to \emph{reproject} data from one CRS to another.
+
+\subsubsection{Reprojecting data}
+
+Transforming the coordinates of spatial data from one CRS to another
+(reprojection) is a common task in GIS. This is because data from
+national sources are generally provided in \emph{projected} coordinates
+(the location on the cartesian coordinates of a map) whereas data from
+GPSs and the internet are generally provided in \emph{geographic}
+coordinates, with latitude and longitude measured in degrees to locate
+points on the surface of the globe.
+
+Reprojecting data in R is quite simple: all you need is a spatial object
+with a known CRS and knowledge of the CRS you wish to transform it to.
+To illustrate why that is necessary, try to plot the objects
+\texttt{lnd} and \texttt{shf2lnd.simple} on the same map:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{combined <- }\KeywordTok{rbind}\NormalTok{(}\KeywordTok{fortify}\NormalTok{(shf2lds.simple)[, }\DecValTok{1}\NormalTok{:}\DecValTok{2}\NormalTok{], }\KeywordTok{fortify}\NormalTok{(lnd)[, }\DecValTok{1}\NormalTok{:}\DecValTok{2}\NormalTok{])}
+\end{Highlighting}
+\end{Shaded}
+\begin{verbatim}
+## Regions defined for each Polygons
+\end{verbatim}
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{plot}\NormalTok{(combined)}
+\end{Highlighting}
+\end{Shaded}
+\begin{figure}[htbp]
+\centering
+\includegraphics{figure/Plot_of_spatial_objects_with_different_CRS.png}
+\caption{Plot of spatial objects with different CRS}
+\end{figure}
+
+In the above code we first extracted the coordinates of each point using
+\texttt{fortify} and then plotted them using \texttt{plot}. The image
+shows why reprojection is necessary: the .gpx data are on a totally
+different scale than the shapefile of London. Hence the tiny dot at the
+bottom right of the graph. We will now reproject the data, allowing
+\texttt{lnd} and \texttt{shf2lds.simple} to be usefully plotted on the
+same graphic:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{lnd.wgs84 <- }\KeywordTok{spTransform}\NormalTok{(lnd, }\DataTypeTok{CRSobj =} \KeywordTok{CRS}\NormalTok{(}\StringTok{"+init=epsg:4326"}\NormalTok{))}
+\end{Highlighting}
+\end{Shaded}
+The above code created a new object,\texttt{lnd.wgs84}, that contains
+the same geometries as the original but in a new CRS using the
+\texttt{spTransform} function. The \texttt{CRS} argument was set to
+\texttt{"+init=epsg:4326"}, which represents the WGS84 CRS via an EPSG
+code {[}6{]}. Now \texttt{lnd} has been reprojected we can plot it next
+to the GPS data:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{combined <- }\KeywordTok{rbind}\NormalTok{(}\KeywordTok{fortify}\NormalTok{(shf2lds.simple)[, }\DecValTok{1}\NormalTok{:}\DecValTok{2}\NormalTok{], }\KeywordTok{fortify}\NormalTok{(lnd.wgs84)[, }\DecValTok{1}\NormalTok{:}\DecValTok{2}\NormalTok{])}
+\end{Highlighting}
+\end{Shaded}
+\begin{verbatim}
+## Regions defined for each Polygons
+\end{verbatim}
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{plot}\NormalTok{(combined)}
+\end{Highlighting}
+\end{Shaded}
+\begin{figure}[htbp]
+\centering
+\includegraphics{figure/Plot_of_spatial_objects_sharing_the_same_CRS.png}
+\caption{Plot of spatial objects sharing the same CRS}
+\end{figure}
+
+Although the plot of the reprojected data is squashed because the axis
+scales are not fixed and distorted (\emph{geographic} coordinates such
+as WGS84 should not usually be used for plotting), at least the relative
+position and shape of both objects can now be seen. The presence of the
+dotted line in the top left of the plot confirms our assumption that the
+GPS data is from around Sheffield, which is northwest of London.
+
+\subsubsection{Attribute join}
+
+Because boroughs are official administrative zones, there is much data
+available at this level that we can link to the polygons in the
+\texttt{lnd} object. We will use the example of crime data to illustrate
+this data availability, which is stored in the \texttt{data} folder
+available from this project's github page.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{load}\NormalTok{(}\StringTok{"data/crimeAg.Rdata"}\NormalTok{)  }\CommentTok{# load the crime dataset from an R dataset}
+\end{Highlighting}
+\end{Shaded}
+After the dataset has been explored (e.g.~using the \texttt{summary} and
+\texttt{head} functions) to ensure compatibility, it can be joined to
+\texttt{lnd}. We will use the the \texttt{join} function in the
+\texttt{plyr} package but the \texttt{merge} function could equally be
+used (remember to type \texttt{library(plyr)} if needed).
+
+\texttt{join} requires all joining variables to have the same name, but
+this work has already been done {[}7{]}. Once this preparation has been
+done, the join funtion is actually very simple:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{lnd@data <- }\KeywordTok{join}\NormalTok{(lnd@data, crimeAg)}
+\end{Highlighting}
+\end{Shaded}
+\begin{verbatim}
+## Joining by: name
+\end{verbatim}
+Take a look at the \texttt{lnd@data} object. You should see new
+variables added, meaning the attribute join was successful.
+
+\subsubsection{Spatial join}
 
 A spatial join, like attribute joins, is used to transfer information
 from one dataset to another. There is a clearly defined direction to
@@ -562,11 +742,12 @@ administrative boundaries, as represented in Fig. x.
 The above code reads in a \texttt{SpatialPointsDataFrame} consisting of
 2532 transport nodes in and surrounding London and then plots a random
 sample of 500 of these over the previously loaded borough level
-adminsitrative boundaries. The reason for ploting a sample of the points
-rather than all of them is that the boundary data becomes difficult to
-see if all of the points are ploted. It is also useful to see and
-practice sampling techniques in practice; try to plot only the first 500
-points, rather than a random selection, and describe the difference.
+administrative boundaries. The reason for piloting a sample of the
+points rather than all of them is that the boundary data becomes
+difficult to see if all of the points are piloted. It is also useful to
+see and practice sampling techniques in practice; try to plot only the
+first 500 points, rather than a random selection, and describe the
+difference.
 
 The most obvious issue with the point data from the perspective of a
 spatial join with the borough data is that many of the points in the
@@ -579,16 +760,6 @@ following code.
 \begin{Shaded}
 \begin{Highlighting}[]
 \KeywordTok{proj4string}\NormalTok{(lnd) <- }\KeywordTok{proj4string}\NormalTok{(lnd.stations)}
-\end{Highlighting}
-\end{Shaded}
-\begin{verbatim}
-## Warning: A new CRS was assigned to an object with an existing CRS:
-## +proj=tmerc +lat_0=49 +lon_0=-2 +k=0.9996012717 +x_0=400000 +y_0=-100000 +ellps=airy +units=m +no_defs
-## without reprojecting.
-## For reprojection, use function spTransform in package rgdal
-\end{verbatim}
-\begin{Shaded}
-\begin{Highlighting}[]
 \NormalTok{lnd.stations <- lnd.stations[lnd, ]  }\CommentTok{# select only points within lnd}
 \KeywordTok{plot}\NormalTok{(lnd.stations)  }\CommentTok{# check the result}
 \end{Highlighting}
@@ -685,7 +856,7 @@ In this case we have three potentially interesting variables:
 represents the number of mice sightings reported by the public at that
 point (this is a fictional variable). To illustrate the power of the
 \texttt{aggregate} function, let us use it to find the average number of
-mices spotted in transport points in each London borough, and the
+mice spotted in transport points in each London borough, and the
 standard deviation:
 
 \begin{Shaded}
@@ -696,8 +867,6 @@ standard deviation:
 \KeywordTok{summary}\NormalTok{(lndSdMice)}
 \end{Highlighting}
 \end{Shaded}
-\subsubsection{Clipping}
-
 \section{Fundamentals of Spatial Data Visualisation}
 
 Good maps depend on sound analysis and data preparation and can have an
@@ -1268,5 +1437,114 @@ Shipping flows.
 !!!change the colour of the routes to make them stand out more.
 
 \section{Recap and Conclusions}
+
+\newpage \section{References}
+
+Bivand, R., \& Gebhardt, A. (2000). Implementing functions for spatial
+statistical analysis using the language. Journal of Geographical
+Systems, 2(3), 307--317.
+
+Bivand, R. S., Pebesma, E. J., \& Rubio, V. G. (2008). Applied spatial
+data: analysis with R. Springer.
+
+Burrough, P. A. \& McDonnell, R. A. (1998). Principals of Geographic
+Information Systems (revised edition). Clarendon Press, Oxford.
+
+Goodchild, M. F. (2007). Citizens as sensors: the world of volunteered
+geography. GeoJournal, 69(4), 211--221.
+
+Harris, R. (2012). A Short Introduction to R.
+\href{http://www.social-statistics.org/}{social-statistics.org}.
+
+Kabacoff, R. (2011). R in Action. Manning Publications Co.
+
+Krygier, J. Wood, D. 2011. Making Maps: A Visual Guide to Map Design for
+GIS (2nd Ed.). New York: The Guildford Press.
+
+Longley, P., Goodchild, M. F., Maguire, D. J., \& Rhind, D. W. (2005).
+Geographic information systems and science. John Wiley \& Sons.
+
+Monkhouse, F.J. and Wilkinson, H. R. 1973. Maps and Diagrams Their
+Compilation and Construction (3rd Edition, reprinted with revisions).
+London: Methuen \& Co Ltd.
+
+Ramsey, P., \& Dubovsky, D. (2013). Geospatial Software's Open Future.
+GeoInformatics, 16(4).
+
+Sherman, G. (2008). Desktop GIS: Mapping the Planet with Open Source
+Tools. Pragmatic Bookshelf.
+
+Torfs and Brauer (2012). A (very) short Introduction to R. The
+Comprehensive R Archive Network.
+
+Venables, W. N., Smith, D. M., \& Team, R. D. C. (2013). An introduction
+to R. The Comprehensive R Archive Network (CRAN). Retrieved from
+http://cran.ma.imperial.ac.uk/doc/manuals/r-devel/R-intro.pdf .
+
+Wickham, H. (2009). ggplot2: elegant graphics for data analysis.
+Springer.
+
+Wickham, H. 2010. A Layered Grammar of Graphics. American Statistical
+Association, Institute of Mathematics Statistics and Interface
+Foundation of North America Journal of Computational and Graphical
+Statistics. 19, 1: 3-28
+
+\section{Endnotes}
+
+\begin{enumerate}[1.]
+\item
+  R's name originates from the creators of R, Ross Ihaka and Robert
+  Gentleman. R is an open source implementation of the statistical
+  programming language S, so its name is also a play on words that makes
+  implicit reference to this.
+\item
+  R is notoriously difficult to search for on major search engines, as
+  it is such a common letter with many other uses beyond the name of a
+  statistical programming language. This should not be a deterrent, as R
+  has a wealth of excellent online resources. To overcome the issue, you
+  can either be more specific with the search term (e.g. ``R spatial
+  statistics'') or use an R specific search engine such as
+  \href{http://www.rseek.org/}{rseek.org}. You can also search of online
+  help \emph{from within R} using the command \texttt{RSiteSearch}. E.g.
+  \texttt{RSiteSearch("spatial statistics")}. Experiment and see which
+  you prefer!
+\item
+  For more information about this ride, please see
+  \href{http://robinlovelace.net/ecotech/2013/10/13/bicycle-trailer-move.html}{robinlovelace.net}.
+\item
+  A complete list of drivers for importing and exporting spatial data
+  can be displayed by typing \texttt{getGDALDriverNames()}.
+\item
+  Slots are elements found `inside' classes of the
+  \href{http://adv-r.had.co.nz/S4.html}{S4 object system}. While the
+  sub-elements of S3 objects such as \texttt{data.frame} are referred to
+  using the \texttt{\$} symbol, the slots of S4 objects are identified
+  using \texttt{@}. Thus, the variable \texttt{x} of dataframe
+  \texttt{df} can be referred to with \texttt{df\$x}. In the same way,
+  the data associated with a polygon layer such as \texttt{lnd} can be
+  accessed with \texttt{lnd@data}. Note that \texttt{lnd@data} is itself
+  a dataframe, so can be further specified, e.g.~with
+  \texttt{lnd@data\$name}. For more on spatial data classes, see Bivand
+  et al. (2013).
+\item
+  EPSG stands for ``European Petroleum Survey Group'', but this is not
+  really worth knowing as the organisation is now defunct
+  (\href{http://www.epsg.org/}{www.epsg.org/}). The important thing is
+  that EPSG codes provide a unified way to refer to a wide range of
+  coordinate systems, as each CRS has its own epsg code. These can be
+  found at the website
+  \href{http://spatialreference.org/}{spatialreference.org}. To see how
+  this website can be useful, try searching for ``osgb'', for example to
+  find the epsg code for the British National Grid.
+\item
+  To see how the \texttt{crimeAg} dataset was created, please refer to
+  the ``Creating-maps-in-R'' tutorial (Cheshire and Lovelace, 2014)
+  hosted on
+  \href{https://github.com/Robinlovelace/Creating-maps-in-R}{GitHub}.
+  The file
+  ``\href{https://github.com/Robinlovelace/Creating-maps-in-R/blob/master/intro-spatial-rl.pdf}{intro-spatial-rl.pdf}''
+  contains this information, in the section on ``Downloading addtional
+  data''.
+\end{enumerate}
 
 \end{document}
