--- a/Section2_R_and_Spatial_Data.Rmd
+++ b/Section2_R_and_Spatial_Data.Rmd
@@ -179,8 +179,14 @@ the following command:
 
 ```{r}
 shf2lds.simple <- SpatialLinesDataFrame(shf2lds.simple, data = data.frame(row.names = "0", a = 1))
-writeOGR(shf2lds.simple, dsn = "data/", layer = "shf2lds", driver = "ESRI Shapefile")
+writeOGR(shf2lds.simple, layer = "shf2lds", dsn = "data/", driver = "ESRI Shapefile")
 ```
+
+```{r, echo=FALSE}
+# delete shf2lds file to prevent it causing errors later on
+system("rm data/shf2lds*")
+```
+
 
 In the above code, the object was first converted into a spatial dataframe class, before 
 being exported as a shapefile entitled shf2lds. Unlike with `readOGR`, the driver must 
@@ -335,7 +341,7 @@ library(plyr)
 ```
 
 `join` requires all joining variables to have the 
-same name, but this work has already been done. Once 
+same name, but this work has already been done [7]. Once 
 this preparation has been done, the 
 join funtion is actually very simple:
 
@@ -499,4 +505,7 @@ summary(lndSdMice)
 lnd.stations$MICE <- rpois(n = nrow(lnd.stations), lambda = 10)
 ```
 
+```{r, echo=FALSE}
 ### Clipping
+```
+
