--- a/chapter.tex
+++ b/chapter.tex
@@ -237,10 +237,9 @@ data in R: how it `sees' spatial data is quite unique.
 \subsubsection{Loading spatial data in R}
 
 In most situations, the starting point of spatial analysis tasks is
-loading in pre-existing datasets. These may originate from government
-agencies, remote sensing devices or `volunteered geographical
-information' (Goodchild 2007). The diversity of geographical data
-formats is large.
+loading in datasets. These may originate from government agencies,
+remote sensing devices or `volunteered geographical information'
+(Goodchild 2007). The diversity of geographical data formats is large.
 
 R is able to import a very wide range of spatial data formats thanks to
 its interface with the Geospatial Data Abstraction Library (GDAL), which
@@ -258,7 +257,8 @@ uploaded Open Street Map {[}3{]}.
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\KeywordTok{download.file}\NormalTok{(}\StringTok{"http://www.openstreetmap.org/trace/1619756/data"}\NormalTok{, }\DataTypeTok{destfile =} \StringTok{"data/gps-trace.gpx"}\NormalTok{)}
+\CommentTok{# download.file('http://www.openstreetmap.org/trace/1619756/data', destfile}
+\CommentTok{# = 'data/gps-trace.gpx')}
 \KeywordTok{library}\NormalTok{(rgdal)  }\CommentTok{# load the gdal package}
 \NormalTok{shf2lds <- }\KeywordTok{readOGR}\NormalTok{(}\DataTypeTok{dsn =} \StringTok{"data/gps-trace.gpx"}\NormalTok{, }\DataTypeTok{layer =} \StringTok{"tracks"}\NormalTok{)  }\CommentTok{# load track}
 \KeywordTok{plot}\NormalTok{(shf2lds)}
@@ -268,8 +268,8 @@ uploaded Open Street Map {[}3{]}.
 \end{Shaded}
 \begin{figure}[htbp]
 \centering
-\includegraphics{figure/Leeds_to_Sheffield_GPS_data.png}
-\caption{Leeds to Sheffield GPS data}
+\includegraphics{figure/unnamed-chunk-1.png}
+\caption{unnamed-chunk-1}
 \end{figure}
 
 There is a lot going on in the preceding 7 lines of code, including
@@ -293,7 +293,7 @@ into R's \emph{workspace} using \texttt{readOGR}.
 Finally, the basic \texttt{plot} function is used to visualize the newly
 imported objects, ensuring they make sense. In the second \texttt{plot}
 function, we take a subset of the object (see section \ldots{} for more
-on this).
+on this). To see how to add axes, enter \texttt{?axis}
 
 As stated in the help documentation (accessed by entering
 \texttt{?readOGR}), the \texttt{dsn =} argument is interpreted
@@ -354,54 +354,41 @@ dataset:
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\KeywordTok{sapply}\NormalTok{(lnd@polygons, function(x) }\KeywordTok{length}\NormalTok{(x))}
-\end{Highlighting}
-\end{Shaded}
-\begin{verbatim}
-##  [1] 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
-\end{verbatim}
-\begin{Shaded}
-\begin{Highlighting}[]
-\NormalTok{x <- }\KeywordTok{sapply}\NormalTok{(lnd@polygons, function(x) }\KeywordTok{nrow}\NormalTok{(x@Polygons[[}\DecValTok{1}\NormalTok{]]@coords))}
-\KeywordTok{sum}\NormalTok{(x)}
-\end{Highlighting}
-\end{Shaded}
-\begin{verbatim}
-## [1] 1102
-\end{verbatim}
-\begin{Shaded}
-\begin{Highlighting}[]
-
-\KeywordTok{sapply}\NormalTok{(shf2lds@lines, function(x) }\KeywordTok{length}\NormalTok{(x))}
-\end{Highlighting}
-\end{Shaded}
-\begin{verbatim}
-## [1] 1
-\end{verbatim}
-\begin{Shaded}
-\begin{Highlighting}[]
-\NormalTok{(nverts <- }\KeywordTok{sapply}\NormalTok{(shf2lds@lines, function(x) }\KeywordTok{nrow}\NormalTok{(x@Lines[[}\DecValTok{1}\NormalTok{]]@coords)))}
+\NormalTok{shf2lds.f <- }\KeywordTok{fortify}\NormalTok{(shf2lds)}
+\KeywordTok{nrow}\NormalTok{(shf2lds.f)}
 \end{Highlighting}
 \end{Shaded}
 \begin{verbatim}
 ## [1] 6085
 \end{verbatim}
-It is quite likely that the above code little sense at first. The
-important thing to remember is that for each object we performed two
-functions: 1) a check that each line or polygon consists only of a
-single \emph{part} (that can be joined to attribute data) and 2) the use
-of \texttt{nrow} to count the number of vertices. The use of the
-\texttt{@} symbol should seem strange - its meaning will become clear in
-the section !!!. (Note also that the function \texttt{fortify},
-discussed in section !!!, can also be used to extract the vertice count
-of spatial objects in R.)
+\begin{Shaded}
+\begin{Highlighting}[]
 
-Without worrying, for now, about how these vertice counts were
-performed, it is clear that the GPS data has almost 6 times the number
-of vertices as does the London data, explaining its larger size. Yet
-when plotted, the GPS data does not seem more detailed, implying that
-some of the vertices in the object are not needed for visualisation at
-the scale of the objects \emph{bounding box}.
+\NormalTok{lnd.f <- }\KeywordTok{fortify}\NormalTok{(lnd)}
+\end{Highlighting}
+\end{Shaded}
+\begin{verbatim}
+## Regions defined for each Polygons
+\end{verbatim}
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{nrow}\NormalTok{(lnd.f)}
+\end{Highlighting}
+\end{Shaded}
+\begin{verbatim}
+## [1] 1102
+\end{verbatim}
+In the above block of code we performed two functions for each object:
+1) \emph{flatten} the dataset so that each vertice is allocated a unique
+row 2) use \texttt{nrow} to count the result. Note the use of the
+\texttt{\textless{}-} assignment operator to create new objects with a
+\texttt{.f} ending.
+
+It is clear that the GPS data has almost 6 times the number of vertices
+as does the London data, explaining its larger size. Yet when plotted,
+the GPS data does not seem more detailed, implying that some of the
+vertices in the object are not needed for visualisation at the scale of
+the objects \emph{bounding box}.
 
 \subsubsection{Simplifying geometries}
 
@@ -955,7 +942,7 @@ may already be on your system. Uncomment each new line (by deleting the
 \begin{Highlighting}[]
 \KeywordTok{download.file}\NormalTok{(}\DataTypeTok{url =} \StringTok{"http://www.naturalearthdata.com/http//www.naturalearthdata.com/download/110m/cultural/ne_110m_admin_0_countries.zip"}\NormalTok{, }
     \StringTok{"ne_110m_admin_0_countries.zip"}\NormalTok{, }\StringTok{"auto"}\NormalTok{)  }\CommentTok{# download file}
-\KeywordTok{unzip}\NormalTok{(}\StringTok{"ne_110m_admin_0_countries.zip"}\NormalTok{)  }\CommentTok{# unzip to data folder}
+\KeywordTok{unzip}\NormalTok{(}\StringTok{"ne_110m_admin_0_countries.zip"}\NormalTok{, }\DataTypeTok{exdir =} \StringTok{"data/"}\NormalTok{)  }\CommentTok{# unzip to data folder}
 \KeywordTok{file.remove}\NormalTok{(}\StringTok{"ne_110m_admin_0_countries.zip"}\NormalTok{)  }\CommentTok{# remove zip file}
 \end{Highlighting}
 \end{Shaded}
@@ -1356,10 +1343,7 @@ Shipping flows.
 \end{Highlighting}
 \end{Shaded}
 \begin{verbatim}
-## OGR data source with driver: ESRI Shapefile 
-## Source: ".", layer: "ne_110m_admin_0_countries"
-## with 177 features and 63 fields
-## Feature type: wkbPolygon with 2 dimensions
+## Error: Cannot open file
 \end{verbatim}
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1382,16 +1366,16 @@ Shipping flows.
 \end{Highlighting}
 \end{Shaded}
 \begin{verbatim}
-## Loading required package: rgeos
-## rgeos version: 0.2-19, (SVN revision 394)
-##  GEOS runtime version: 3.3.8-CAPI-1.7.8 
-##  Polygon checking: TRUE
+## Error: object 'wrld' not found
 \end{verbatim}
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{base <- }\KeywordTok{ggplot}\NormalTok{(wrld.pop.f, }\KeywordTok{aes}\NormalTok{(}\DataTypeTok{x =} \NormalTok{long, }\DataTypeTok{y =} \NormalTok{lat))}
 \end{Highlighting}
 \end{Shaded}
+\begin{verbatim}
+## Error: object 'wrld.pop.f' not found
+\end{verbatim}
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{route <- }\KeywordTok{c}\NormalTok{(}\KeywordTok{geom_path}\NormalTok{(}\KeywordTok{aes}\NormalTok{(long, lat, }\DataTypeTok{group =} \KeywordTok{paste}\NormalTok{(bdata$trp, bdata$group.regroup, }
@@ -1405,6 +1389,9 @@ Shipping flows.
     \DataTypeTok{data =} \NormalTok{wrld.pop.f, }\DataTypeTok{alpha =} \DecValTok{1}\NormalTok{))}
 \end{Highlighting}
 \end{Shaded}
+\begin{verbatim}
+## Error: object 'wrld.pop.f' not found
+\end{verbatim}
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{base + route + wrld + }\KeywordTok{theme}\NormalTok{(}\DataTypeTok{panel.background =} \KeywordTok{element_rect}\NormalTok{(}\DataTypeTok{fill =} \StringTok{"#BAC4B9"}\NormalTok{, }
@@ -1413,12 +1400,9 @@ Shipping flows.
     \DataTypeTok{ymax =} \DecValTok{65}\NormalTok{) + }\KeywordTok{coord_equal}\NormalTok{() + quiet}
 \end{Highlighting}
 \end{Shaded}
-\begin{figure}[htbp]
-\centering
-\includegraphics{figure/unnamed-chunk-7.png}
-\caption{unnamed-chunk-7}
-\end{figure}
-
+\begin{verbatim}
+## Error: object 'base' not found
+\end{verbatim}
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{base + }\KeywordTok{annotation_raster}\NormalTok{(earth, }\DataTypeTok{xmin =} \NormalTok{-}\DecValTok{180}\NormalTok{, }\DataTypeTok{xmax =} \DecValTok{180}\NormalTok{, }\DataTypeTok{ymin =} \NormalTok{-}\DecValTok{90}\NormalTok{, }\DataTypeTok{ymax =} \DecValTok{90}\NormalTok{) + }
@@ -1428,12 +1412,9 @@ Shipping flows.
     \KeywordTok{coord_equal}\NormalTok{() + quiet}
 \end{Highlighting}
 \end{Shaded}
-\begin{figure}[htbp]
-\centering
-\includegraphics{figure/unnamed-chunk-8.png}
-\caption{unnamed-chunk-8}
-\end{figure}
-
+\begin{verbatim}
+## Error: object 'base' not found
+\end{verbatim}
 !!!change the colour of the routes to make them stand out more.
 
 \section{Recap and Conclusions}
@@ -1546,5 +1527,10 @@ Statistics. 19, 1: 3-28
   contains this information, in the section on ``Downloading addtional
   data''.
 \end{enumerate}
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{source}\NormalTok{(}\StringTok{"chapter.R"}\NormalTok{)  }\CommentTok{# convert chapter to tex}
+\end{Highlighting}
+\end{Shaded}
 
 \end{document}
